--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang = "en">
-    <head>MELY</head>
-    <body>hola mel</body>
+    <head>
+        <title>
+            MELY
+        </title>   
+    </head>
+    <body>
+        hola mel
+        <img src="mel.jpg" alt="mini-meli">   
+    </body>
 </html>
