--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         hola mel
-        <img src="mel.jpg" alt="mini-meli">   
+        <img src="test/mel.jpg" alt="mini-meli" class="inline"/>   
     </body>
 </html>
