--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>   
     </head>
     <body>
-        hola mel
+        hola melisa
         <img src="test/mel.jpg" alt="mini-meli" class="inline"/>   
     </body>
 </html>
